name:                todo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xldenis/todo#readme
license:             BSD3
license-file:        LICENSE
author:              Xavier Denis
maintainer:          xldenis@gmail.com
copyright:           WTFPL
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Todo
                     , Todo.Parser
                     , Todo.Syntax
  other-modules:       Todo.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , megaparsec
                     , time
                     , wl-pprint-extras
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable todo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todo
                     , protolude >= 0.1.6 && < 0.2
                     , megaparsec
                     , optparse-generic
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todo
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/xldenis/todo
